plugins {
	id 'org.springframework.boot' version '3.2.0'  // Spring Boot 3.2.x 버전
	id 'io.spring.dependency-management' version '1.1.3'
	id 'java'
}

tasks.named('bootJar') {
	enabled = false
}

allprojects {
	group = "com.Jinhyy"
	version = "0.0.1-SNAPSHOT"
	sourceCompatibility = '21'

	tasks.withType(JavaCompile) { options.encoding = "UTF-8" }

	repositories {
		mavenCentral()
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

subprojects {
	apply plugin: 'java-library'
	apply plugin: 'application'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-validation'
		implementation 'org.springframework.boot:spring-boot-starter-webflux'
		compileOnly 'org.projectlombok:lombok'
		developmentOnly 'org.springframework.boot:spring-boot-devtools'
		annotationProcessor 'org.projectlombok:lombok'
//		implementation 'io.projectreactor:reactor-tools'  // for debuging
//		implementation 'io.projectreactor.addons:reactor-extra'  // for debuging
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'io.projectreactor:reactor-test'
	}
}
